2012-06-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Source clean up.

	* src/wordseg.cpp (SplitToken):
	  - Drop unused var 'i'.
	  - Rearrange loop condition and make assignments concise.

2012-06-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Source clean up.

	* src/wordseg.cpp:
	  - Drop myisspace() and just use libc isspace().
	  - Drop unused functions RemoveJunkChars() and IsValidChar().

2012-06-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Make RTFToken methods inline.

	* src/filterrtf.cpp (RTFToken):
	  - Make methods inline functions.

2012-06-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Rearrange functions so get related functions closer.

	* src/filterrtf.cpp:
	  - Move chgCharState() to near GetNextToken().

2012-06-26  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Rewrite RTF reader for Unicode support.

	* src/worddef.h (isThaiUni, uni2tis):
	  - Add utility functions for UCS checking & conversion.
	* src/filterrtf.h, src/filterrtf.cpp:
	  - Make chgCharState() member returns token as object, rather than
	    letting the caller does all the jobs.
	  - Add class RTFToken with its manipulation methods.
	  - Rewrite FilterRTF::GetNextToken() based on the extended state
	    machine.
	  - Adjust FilterRTF::Print() behavior, as the new reader now
	    tokenizes more accurately. Some common code has been split into
	    the new printNonThai() method.
	  - Drop the FilterRTF::isThaiChar() method. Now unneeded.

2012-06-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix RTF Unicode output with proper \ucN.

	* src/filterrtf.h (class FilterRTF):
	  - Add curUTFBytes member to keep track of current UTF-8 bytes.
	* src/filterrtf.cpp (FilterRTF::FilterRTF):
	  - Initialize curUTFBytes = 1.
	  - Initialize Unicode word break with normal UTF-8, to be escaped
	    like ordinary characters.
	* src/filterrtf.cpp (FilterRTF::Print):
	  - Fix UTF-8 escaping loop so it outputs correctly.